[package]
name = "slippay-rust"
version = "0.1.0"
edition = "2021"

[dependencies]

tokio = { version = "1", features = ["full"] }

axum = "0.7"

reqwest = { version = "0.12", features = ["json"] }

serde = { version = "1", features = ["derive"] }

serde_json = "1"

sqlx = { version = "0.7", features = [
    "sqlite",
    "runtime-tokio-rustls"
] }

hmac = "0.12"

sha2 = "0.10"

hex = "0.4"

chrono = "0.4"

uuid = { version = "1", features = ["v4"] }
