[package]
name = "slippay-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

sqlx = { version = "0.7", features = ["sqlite", "postgres", "runtime-tokio-rustls"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

hmac = "0.12"
sha2 = "0.10"
base64 = "0.21"
hex = "0.4"

anyhow = "1"
thiserror = "1"

pest = "2.7"
pest_derive = "2.7"

# Dependência local com hífen
ast-engine = { path = "crates/ast-engine" }

[workspace]
members = [
    ".",
    "crates/ast-engine",
]
