[workspace]
members = [
    "crates/ast-engine",
    "crates/pq-security",
    "crates/risk-engine",
    "crates/policy-engine"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["SlipPay Engineering"]
license = "MIT"

[workspace.dependencies]
serde = "1.0"
serde_json = "1.0"
tokio = "1.14"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
ed25519-dalek = "2.1.1"
rand = "0.8.5"
pqcrypto-traits = "0.3"
pqcrypto-kyber = "0.8"
pqcrypto-dilithium = "0.5"
meval = "0.2"
nom = "7.1"
chrono = "0.4"
# 💾 Nossa fundação de dados (Banco Relacional Async)
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }

[package]
name = "slippay-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Dependências do Workspace que o core vai usar direto
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
tracing = { workspace = true }
sqlx = { workspace = true }

# 🔗 Nossos Motores Internos (Crates)
ast-engine = { path = "crates/ast-engine" }
pq-security = { path = "crates/pq-security" }
risk-engine = { path = "crates/risk-engine" }
policy-engine = { path = "crates/policy-engine" }

