[package]
name = "policy-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Dependências herdadas da raiz
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tracing = { workspace = true }

# Dependência INTERNA do seu próprio Workspace
ast-engine = { path = "../ast-engine" }

